[package]
name = "wcurses"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
description = "a simple terminal control library"
readme = "README.md"
repository = "https://github.com/richardanaya/wcurses"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libw = {version="0"}